--- a/guide_style.css
+++ b/guide_style.css
@@ -46,6 +46,10 @@ h2 {
     font-family: sans-serif;
 }
 
+h3 {
+    font-family: sans-serif;
+}
+
 p {
     font-family: sans-serif;
     font-weight: 200;
